src/test/errors/frameError.hhl
/*
    A simple test case for errors caused by a frame statement which may not hold.
    Output:
        Verification failed
        After stripping 0 quantifier(s):
        [Frame] The following hyper assertion used in a frame might not hold:
        forall <_s: State> :: ((<_s>) ==> (false))
*/

method methodCallError() returns (out: Int)
    requires exists <_s> :: true
    ensures exists <_s> :: _s[out] == 2
{
    frame forall <_s> :: false {
        out := 2
    }
}

vz&3Vs8j^6eh7%az